Add missing mappings

--- a/src/fabric-1.17.1/mappings/defaultfeatures.yaml
+++ b/src/fabric-1.17.1/mappings/defaultfeatures.yaml
@@ -9,6 +9,7 @@ Dripstone: Dripstone
 ExtraEmeraldOre: EmeraldOre
 ExtraGoldOre: ExtraGoldOre
 Fossils: Fossils
+FrozenTopLayer: FrozenTopLayer
 Icebergs: Icebergs
 InfestedStone: InfestedStone
 JungleGrass: JungleGrass
