--- a/src/fabric-1.17.1/mappings/particles.yaml
+++ b/src/fabric-1.17.1/mappings/particles.yaml
@@ -4,6 +4,7 @@ _default: ParticleTypes.CRIT
 SPELL_MOB_AMBIENT: ParticleTypes.AMBIENT_ENTITY_EFFECT
 VILLAGER_ANGRY: ParticleTypes.ANGRY_VILLAGER
 BARRIER: ParticleTypes.BARRIER
+LIGHT: ParticleTypes.LIGHT
 WATER_BUBBLE: ParticleTypes.BUBBLE
 CLOUD: ParticleTypes.CLOUD
 CRIT: ParticleTypes.CRIT
@@ -24,6 +25,7 @@ EXPLOSION_EMITTER: ParticleTypes.EXPLOSION_EMITTER
 EXPLOSION_NORMAL: ParticleTypes.EXPLOSION
 FIREWORKS_SPARK: ParticleTypes.FIREWORK
 WATER_WAKE: ParticleTypes.FISHING
+FISHING: ParticleTypes.FISHING
 FLAME: ParticleTypes.FLAME
 FLASH: ParticleTypes.FLASH
 VILLAGER_HAPPY: ParticleTypes.HAPPY_VILLAGER
@@ -35,6 +37,7 @@ SNOWBALL: ParticleTypes.ITEM_SNOWBALL
 SMOKE_LARGE: ParticleTypes.LARGE_SMOKE
 LAVA: ParticleTypes.LAVA
 TOWN_AURA: ParticleTypes.MYCELIUM
+MYCELIUM: ParticleTypes.MYCELIUM
 NOTE: ParticleTypes.NOTE
 POOF: ParticleTypes.POOF
 PORTAL: ParticleTypes.PORTAL
@@ -59,11 +62,13 @@ DRIPPING_HONEY: ParticleTypes.DRIPPING_HONEY
 FALLING_HONEY: ParticleTypes.FALLING_HONEY
 LANDING_HONEY: ParticleTypes.LANDING_HONEY
 FALLING_NECTAR: ParticleTypes.FALLING_NECTAR
+FALLING_SPORE_BLOSSOM: ParticleTypes.FALLING_SPORE_BLOSSOM
 SOUL_FIRE_FLAME: ParticleTypes.SOUL_FIRE_FLAME
 SOUL: ParticleTypes.SOUL
 ASH: ParticleTypes.ASH
 CRIMSON_SPORE: ParticleTypes.CRIMSON_SPORE
 WARPED_SPORE: ParticleTypes.WARPED_SPORE
+SPORE_BLOSSOM_AIR: ParticleTypes.SPORE_BLOSSOM_AIR
 DRIPPING_OBSIDIAN_TEAR: ParticleTypes.DRIPPING_OBSIDIAN_TEAR
 FALLING_OBSIDIAN_TEAR: ParticleTypes.FALLING_OBSIDIAN_TEAR
 LANDING_OBSIDIAN_TEAR: ParticleTypes.LANDING_OBSIDIAN_TEAR
