--- a/src/fabric-1.17.1/mappings/mapcolors.yaml
+++ b/src/fabric-1.17.1/mappings/mapcolors.yaml
@@ -2,6 +2,7 @@ _default: DEFAULT
 DEFAULT: DEFAULT
 AIR: CLEAR
 GRASS: PALE_GREEN
+PODZOL: SPRUCE_BROWN
 SAND: PALE_YELLOW
 CLOTH: WOOL
 TNT: TNT
@@ -52,7 +53,6 @@ BROWN_TERRACOTTA: TERRACOTTA_BROWN
 GREEN_TERRACOTTA: TERRACOTTA_GREEN
 RED_TERRACOTTA: TERRACOTTA_RED
 BLACK_TERRACOTTA: TERRACOTTA_BLACK
-SPRUCE: SPRUCE_BROWN
 CRIMSON_NYLIUM: DULL_RED
 CRIMSON_STEM: DULL_PINK
 CRIMSON_HYPHAE: DARK_CRIMSON
