Fix the display name of creative tabs

--- a/src/fabric-1.17.1/tab.definition.yaml
+++ b/src/fabric-1.17.1/tab.definition.yaml
@@ -1,5 +1,5 @@
 localizationkeys:
-  - key: itemGroup.tab@registryname
+  - key: itemGroup.@modid.@registryname
     mapto: name
 
 global_templates:
