--- a/src/fabric-1.17.1/generator.yaml
+++ b/src/fabric-1.17.1/generator.yaml
@@ -34,6 +34,13 @@ base_templates:
 - template: "modbase/pack.mcmeta.ftl"
   writer: json
   name: "@RESROOT/pack.mcmeta"
+- template: modbase/sounds.json.ftl
+  writer: json
+  name: "@MODASSETSROOT/sounds.json"
+  condition: hasSounds()
+- template: elementinits/sounds.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameSounds.java"
+  condition: hasSounds()
 
 language_file:
   format: json
