Exclude the show search bar parameter

--- a/src/fabric-1.17.1/tab.definition.yaml
+++ b/src/fabric-1.17.1/tab.definition.yaml
@@ -6,3 +6,5 @@ global_templates:
   - template: elementinits/tabs.java.ftl
     writer: java
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameTabs.java"
+
+field_exclusions: [ showSearch ]
