--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ import jdk.internal.misc.OSEnvironment
 import java.nio.file.Files
 
 class Globals {
-    private static final def ARCHIVE_NAME = "generator-fabric"
-    private static final def MINECRAFT_VERSION = "1.16.5"
+    private static final def ARCHIVE_NAME = "generator-fabric-1.16.5"
+    public static final def MCREATOR_ROOT_FOLDER = "C://Program Files/Pylo/MCreator/"
 
     static def getArchiveName() {
-        return ARCHIVE_NAME + "-" + MINECRAFT_VERSION + ".zip"
+        return ARCHIVE_NAME + ".zip"
     }
 
     static String getOSName() {
@@ -43,7 +43,7 @@ task launch {
         if (Globals.getOSName().contains('windows')) {
             try {
                 exec {
-                    workingDir "C://Program Files/Pylo/MCreator/"
+                    workingDir Globals.MCREATOR_ROOT_FOLDER
                     commandLine 'cmd', '/c', 'mcreator.bat'
                 }
             } catch (IOException e) {
