Change yarn mappings to Mojmaps for easier port

--- a/src/fabric-1.17.1/mappings/damagesources.yaml
+++ b/src/fabric-1.17.1/mappings/damagesources.yaml
@@ -18,7 +18,7 @@ WITHER: DamageSource.WITHER
 ANVIL: DamageSource.ANVIL
 FALLING_BLOCK: DamageSource.FALLING_BLOCK
 DRAGON_BREATH: DamageSource.DRAGON_BREATH
-DRYOUT: DamageSource.DRYOUT
+DRYOUT: DamageSource.DRY_OUT
 SWEET_BERRY_BUSH: DamageSource.SWEET_BERRY_BUSH
 FREEZE: DamageSource.FREEZE
 FALLING_STALACTITE: DamageSource.FALLING_STALACTITE
