--- a/src/fabric-1.17.1/mappings/defaultfeatures.yaml
+++ b/src/fabric-1.17.1/mappings/defaultfeatures.yaml
@@ -1,32 +1,32 @@
 _default: null
-AmethystGeodes: AmethystGeodes
-Bamboo: BambooJungleTrees
-BerryBushes: SweetBerryBushes
-Caves: LandCarvers
-DeadBushes: DesertDeadBushes
-DesertFeatures: DesertFeatures
+AmethystGeodes: DefaultCrystalFormations
+Bamboo: BambooVegetation
+BerryBushes: BerryBushes
+Caves: DefaultCarvers
+DeadBushes: DesertVegetation
+DesertFeatures: DesertExtraDecoration
 Dripstone: Dripstone
-ExtraEmeraldOre: EmeraldOre
-ExtraGoldOre: ExtraGoldOre
-Fossils: Fossils
-FrozenTopLayer: FrozenTopLayer
+ExtraEmeraldOre: ExtraEmeralds
+ExtraGoldOre: ExtraGold
+Fossils: FossilDecoration
+FrozenTopLayer: SurfaceFreezing
 Icebergs: Icebergs
 InfestedStone: InfestedStone
 JungleGrass: JungleGrass
 JungleTreeForest: JungleTrees
 Lakes: DefaultLakes
-LushCavesDecoration: LushCavesDecoration
-MonsterRooms: Dungeons
+LushCavesDecoration: LushCavesVegetationFeatures
+MonsterRooms: DefaultMonsterRoom
 OceanCaves: OceanCarvers
 Ores: DefaultOres
-PlainsTallGrass: PlainsTallGrass
-ReedsAndPumpkins: DefaultVegetation
+PlainsTallGrass: SavannaGrass
+ReedsAndPumpkins: DefaultExtraVegetation
 SavannaTrees: SavannaTrees
-SedimentDisks: DefaultDisks
-SwampClayDisks: ClayDisk
+SedimentDisks: DefaultSoftDisks
+SwampClayDisks: SwampClayDisk
 SwampVegetation: SwampVegetation
 TaigaGrassAndMushrooms: TaigaGrass
-TaigaGrassDeadBushesMushrooms: GiantTaigaGrass
-TaigaLargeFerns: LargeFerns
-TaigaRocks: MossyRocks
-TallSeagrassLush: SeagrassOnStone
+TaigaGrassDeadBushesMushrooms: GiantTaigaVegetation
+TaigaLargeFerns: Ferns
+TaigaRocks: MossyStoneBlock
+TallSeagrassLush: DefaultSeagrass
