--- a/src/fabric-1.17.1/mappings/effects.yaml
+++ b/src/fabric-1.17.1/mappings/effects.yaml
@@ -1,35 +1,35 @@
-_default: StatusEffects.SPEED
+_default: MobEffects.MOVEMENT_SPEED
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@JavaModNameStatusEffects.@REGISTRYNAME"
-SPEED: StatusEffects.SPEED
-SLOWNESS: StatusEffects.SLOWNESS
-HASTE: StatusEffects.HASTE
-MINING_FATIGUE: StatusEffects.MINING_FATIGUE
-STRENGTH: StatusEffects.STRENGTH
-INSTANT_HEALTH: StatusEffects.INSTANT_HEALTH
-INSTANT_DAMAGE: StatusEffects.INSTANT_DAMAGE
-JUMP_BOOST: StatusEffects.JUMP_BOOST
-NAUSEA: StatusEffects.NAUSEA
-REGENERATION: StatusEffects.REGENERATION
-RESISTANCE: StatusEffects.RESISTANCE
-FIRE_RESISTANCE: StatusEffects.FIRE_RESISTANCE
-WATER_BREATHING: StatusEffects.WATER_BREATHING
-INVISIBILITY: StatusEffects.INVISIBILITY
-BLINDNESS: StatusEffects.BLINDNESS
-NIGHT_VISION: StatusEffects.NIGHT_VISION
-HUNGER: StatusEffects.HUNGER
-WEAKNESS: StatusEffects.WEAKNESS
-POISON: StatusEffects.POISON
-WITHER: StatusEffects.WITHER
-HEALTH_BOOST: StatusEffects.HEALTH_BOOST
-ABSORPTION: StatusEffects.ABSORPTION
-SATURATION: StatusEffects.SATURATION
-GLOWING: StatusEffects.GLOWING
-LEVITATION: StatusEffects.LEVITATION
-LUCK: StatusEffects.LUCK
-UNLUCK: StatusEffects.UNLUCK
-SLOW_FALLING: StatusEffects.SLOW_FALLING
-CONDUIT_POWER: StatusEffects.CONDUIT_POWER
-DOLPHINS_GRACE: StatusEffects.DOLPHINS_GRACE
-BAD_OMEN: StatusEffects.BAD_OMEN
-HERO_OF_THE_VILLAGE: StatusEffects.HERO_OF_THE_VILLAGE
+_mcreator_map_template: "@JavaModNameMobEffects.@REGISTRYNAME"
+SPEED: MobEffects.MOVEMENT_SPEED
+SLOWNESS: MobEffects.MOVEMENT_SLOWDOWN
+HASTE: MobEffects.DIG_SPEED
+MINING_FATIGUE: MobEffects.DIG_SLOWDOWN
+STRENGTH: MobEffects.DAMAGE_BOOST
+INSTANT_HEALTH: MobEffects.HEAL
+INSTANT_DAMAGE: MobEffects.HARM
+JUMP_BOOST: MobEffects.JUMP
+NAUSEA: MobEffects.CONFUSION
+REGENERATION: MobEffects.REGENERATION
+RESISTANCE: MobEffects.DAMAGE_RESISTANCE
+FIRE_RESISTANCE: MobEffects.FIRE_RESISTANCE
+WATER_BREATHING: MobEffects.WATER_BREATHING
+INVISIBILITY: MobEffects.INVISIBILITY
+BLINDNESS: MobEffects.BLINDNESS
+NIGHT_VISION: MobEffects.NIGHT_VISION
+HUNGER: MobEffects.HUNGER
+WEAKNESS: MobEffects.WEAKNESS
+POISON: MobEffects.POISON
+WITHER: MobEffects.WITHER
+HEALTH_BOOST: MobEffects.HEALTH_BOOST
+ABSORPTION: MobEffects.ABSORPTION
+SATURATION: MobEffects.SATURATION
+GLOWING: MobEffects.GLOWING
+LEVITATION: MobEffects.LEVITATION
+LUCK: MobEffects.LUCK
+UNLUCK: MobEffects.UNLUCK
+SLOW_FALLING: MobEffects.SLOW_FALLING
+CONDUIT_POWER: MobEffects.CONDUIT_POWER
+DOLPHINS_GRACE: MobEffects.DOLPHINS_GRACE
+BAD_OMEN: MobEffects.BAD_OMEN
+HERO_OF_THE_VILLAGE: MobEffects.HERO_OF_THE_VILLAGE
