--- a/src/fabric-1.17.1/mappings/enchantments.yaml
+++ b/src/fabric-1.17.1/mappings/enchantments.yaml
@@ -1,9 +1,9 @@
-_default: Enchantments.EFFICIENCY
+_default: Enchantments.BLOCK_EFFICIENCY
 _mcreator_prefix: "CUSTOM:"
 _mcreator_map_template: "@JavaModNameEnchantments.@REGISTRYNAME"
-PROTECTION: Enchantments.PROTECTION
+PROTECTION: Enchantments.ALL_DAMAGE_PROTECTION
 FIRE_PROTECTION: Enchantments.FIRE_PROTECTION
-FEATHER_FALLING: Enchantments.FEATHER_FALLING
+FEATHER_FALLING: Enchantments.FALL_PROTECTION
 BLAST_PROTECTION: Enchantments.BLAST_PROTECTION
 PROJECTILE_PROTECTION: Enchantments.PROJECTILE_PROTECTION
 RESPIRATION: Enchantments.RESPIRATION
@@ -17,18 +17,18 @@ SMITE: Enchantments.SMITE
 BANE_OF_ARTHROPODS: Enchantments.BANE_OF_ARTHROPODS
 KNOCKBACK: Enchantments.KNOCKBACK
 FIRE_ASPECT: Enchantments.FIRE_ASPECT
-LOOTING: Enchantments.LOOTING
-SWEEPING: Enchantments.SWEEPING
-EFFICIENCY: Enchantments.EFFICIENCY
+LOOTING: Enchantments.MOB_LOOTING
+SWEEPING: Enchantments.SWEEPING_EDGE
+EFFICIENCY: Enchantments.BLOCK_EFFICIENCY
 SILK_TOUCH: Enchantments.SILK_TOUCH
 UNBREAKING: Enchantments.UNBREAKING
-FORTUNE: Enchantments.FORTUNE
-POWER: Enchantments.POWER
-PUNCH: Enchantments.PUNCH
-FLAME: Enchantments.FLAME
-INFINITY: Enchantments.INFINITY
-LUCK_OF_THE_SEA: Enchantments.LUCK_OF_THE_SEA
-LURE: Enchantments.LURE
+FORTUNE: Enchantments.BLOCK_FORTUNE
+POWER: Enchantments.POWER_ARROWS
+PUNCH: Enchantments.PUNCH_ARROWS
+FLAME: Enchantments.FLAMING_ARROWS
+INFINITY: Enchantments.INFINITY_ARROWS
+LUCK_OF_THE_SEA: Enchantments.FISHING_LUCK
+LURE: Enchantments.FISHING_SPEED
 LOYALTY: Enchantments.LOYALTY
 IMPALING: Enchantments.IMPALING
 RIPTIDE: Enchantments.RIPTIDE
