--- a/src/fabric-1.17.1/mappings/mapcolors.yaml
+++ b/src/fabric-1.17.1/mappings/mapcolors.yaml
@@ -1,48 +1,48 @@
 _default: DEFAULT
 DEFAULT: DEFAULT
-AIR: CLEAR
-GRASS: PALE_GREEN
-PODZOL: SPRUCE_BROWN
-SAND: PALE_YELLOW
+AIR: NONE
+GRASS: GRASS
+PODZOL: PODZOL
+SAND: SAND
 CLOTH: WOOL
-TNT: TNT
-ICE: PALE_PURPLE
-IRON: IRON_GRAY
-FOLIAGE: GREEN
+TNT: FIRE
+ICE: ICE
+IRON: METAL
+FOLIAGE: PLANT
 SNOW: SNOW
-CLAY: LIGHT_BLUE_GRAY
-DIRT: PALE_ORANGE_BROWN
-STONE: DIM_GRAY
-WATER: BRIGHT_BLUE
-WOOD: OAK_TAN
-QUARTZ: OFF_WHITE
-ADOBE: ADOBE
-MAGENTA: MAGENTA
-LIGHT_BLUE: LIGHT_BLUE
-YELLOW: YELLOW
-LIME: LIME
-PINK: PINK
-GRAY: GRAY
-SILVER: LIGHT_GRAY
-CYAN: CYAN
-PURPLE: PURPLE
-BLUE: BLUE
-BROWN: BROWN
-GREEN: GREEN
-RED: RED
-BLACK: BLACK
+CLAY: CLAY
+DIRT: DIRT
+STONE: STONE
+WATER: WATER
+WOOD: WOOD
+QUARTZ: QUARTZ
+ADOBE: COLOR_ORANGE
+MAGENTA: COLOR_MAGENTA
+LIGHT_BLUE: COLOR_LIGHT_BLUE
+YELLOW: COLOR_YELLOW
+LIME: COLOR_LIGHT_GREEN
+PINK: COLOR_PINK
+GRAY: COLOR_GRAY
+SILVER: COLOR_LIGHT_GRAY
+CYAN: COLOR_CYAN
+PURPLE: COLOR_PURPLE
+BLUE: COLOR_BLUE
+BROWN: COLOR_BROWN
+GREEN: COLOR_GREEN
+RED: COLOR_RED
+BLACK: COLOR_BLACK
 GOLD: GOLD
-DIAMOND: DIAMOND_BLUE
-LAPIS: LAPIS_BLUE
-EMERALD: EMERALD_GREEN
-OBSIDIAN: OBSIDIAN
-NETHERRACK: DARK_RED
+DIAMOND: DIAMOND
+LAPIS: LAPIS
+EMERALD: EMERALD
+OBSIDIAN: PODZOL
+NETHERRACK: NETHER
 WHITE_TERRACOTTA: TERRACOTTA_WHITE
 ORANGE_TERRACOTTA: TERRACOTTA_ORANGE
 MAGENTA_TERRACOTTA: TERRACOTTA_MAGENTA
 LIGHT_BLUE_TERRACOTTA: TERRACOTTA_LIGHT_BLUE
 YELLOW_TERRACOTTA: TERRACOTTA_YELLOW
-LIME_TERRACOTTA: TERRACOTTA_LIME
+LIME_TERRACOTTA: TERRACOTTA_LIGHT_GREEN
 PINK_TERRACOTTA: TERRACOTTA_PINK
 GRAY_TERRACOTTA: TERRACOTTA_GRAY
 LIGHT_GRAY_TERRACOTTA: TERRACOTTA_LIGHT_GRAY
@@ -53,13 +53,13 @@ BROWN_TERRACOTTA: TERRACOTTA_BROWN
 GREEN_TERRACOTTA: TERRACOTTA_GREEN
 RED_TERRACOTTA: TERRACOTTA_RED
 BLACK_TERRACOTTA: TERRACOTTA_BLACK
-CRIMSON_NYLIUM: DULL_RED
-CRIMSON_STEM: DULL_PINK
-CRIMSON_HYPHAE: DARK_CRIMSON
-WARPED_NYLIUM: TEAL
-WARPED_STEM: DARK_AQUA
-WARPED_HYPHAE: DARK_DULL_PINK
-WARPED_WART: BRIGHT_TEAL
-DEEPSLATE_GRAY: DEEPSLATE_GRAY
-RAW_IRON_PINK: RAW_IRON_PINK
-LICHEN_GREEN: LICHEN_GREEN
+CRIMSON_NYLIUM: CRIMSON_NYLIUM
+CRIMSON_STEM: CRIMSON_STEM
+CRIMSON_HYPHAE: CRIMSON_HYPHAE
+WARPED_NYLIUM: WARPED_NYLIUM
+WARPED_STEM: WARPED_STEM
+WARPED_HYPHAE: WARPED_HYPHAE
+WARPED_WART: WARPED_WART_BLOCK
+DEEPSLATE_GRAY: DEEPSLATE
+RAW_IRON_PINK: RAW_IRON
+LICHEN_GREEN: GLOW_LICHEN
