--- a/src/fabric-1.17.1/mappings/materials.yaml
+++ b/src/fabric-1.17.1/mappings/materials.yaml
@@ -1,50 +1,50 @@
-_default: SOIL
-EARTH: SOIL
-GRASS: ORGANIC_PRODUCT
-WOOD: WOOD
-ROCK: STONE
-IRON: METAL
-ANVIL: ANVIL
-WATER: WATER
-LAVA: LAVA
-LEAVES: LEAVES
-PLANTS: PLANT
-TALL_PLANTS: REPLACEABLE_PLANT
-SPONGE: SPONGE
-CLOTH: WOOL
-FIRE: FIRE
-SAND: AGGREGATE
-MISCELLANEOUS: SOLID_ORGANIC
-CARPET: CARPET
-GLASS: GLASS
-REDSTONE_LIGHT: REDSTONE_LAMP
-TNT: TNT
-CORAL: CORAL
-ICE: ICE
-PACKED_ICE: DENSE_ICE
-SNOW: SNOW_LAYER
-CRAFTED_SNOW: SNOW_BLOCK
-CACTUS: CACTUS
-CLAY: CLAY
-GOURD: GOURD
-DRAGON_EGG: EGG
-PORTAL: PORTAL
-CAKE: CAKE
-WEB: COBWEB
+_default: DIRT
 AIR: AIR
-STRUCTURE_VOID: STRUCTURE_VOID
-OCEAN_PLANT: UNDERWATER_PLANT
-SEA_GRASS: UNDERWATER_PLANT
+STRUCTURE_VOID: STRUCTURAL_AIR
+PORTAL: PORTAL
+CARPET: CLOTH_DECORATION
+PLANTS: PLANT
+OCEAN_PLANT: WATER_PLANT
+TALL_PLANTS: REPLACEABLE_PLANT
+NETHER_PLANTS: REPLACEABLE_FIREPROOF_PLANT
+SEA_GRASS: REPLACEABLE_WATER_PLANT
+WATER: WATER
 BUBBLE_COLUMN: BUBBLE_COLUMN
-SHULKER: SHULKER_BOX
+LAVA: LAVA
+SNOW: TOP_SNOW
+FIRE: FIRE
+MISCELLANEOUS: DECORATION
+WEB: WEB
+SCULK: SCULK
+BUILDABLE_GLASS: BUILDABLE_GLASS
+CLAY: CLAY
+EARTH: DIRT
+GRASS: GRASS
+PACKED_ICE: ICE_SOLID
+SAND: SAND
+SPONGE: SPONGE
+SHULKER: SHULKER_SHELL
+WOOD: WOOD
+NETHER_WOOD: NETHER_WOOD
 BAMBOO_SAPLING: BAMBOO_SAPLING
 BAMBOO: BAMBOO
+CLOTH: WOOL
+TNT: EXPLOSIVE
+LEAVES: LEAVES
+GLASS: GLASS
+ICE: ICE
+CACTUS: CACTUS
+ROCK: STONE
+IRON: METAL
+CRAFTED_SNOW: SNOW
+ANVIL: HEAVY_METAL
 BARRIER: BARRIER
 PISTON: PISTON
-NETHER_PLANTS: NETHER_SHOOTS
-NETHER_WOOD: NETHER_WOOD
-SCULK: SCULK
-BUILDABLE_GLASS: REDSTONE_LAMP
-MOSS_BLOCK: MOSS_BLOCK
+MOSS_BLOCK: MOSS
+GOURD: VEGETABLE
+DRAGON_EGG: EGG
+CAKE: CAKE
 AMETHYST: AMETHYST
 POWDER_SNOW: POWDER_SNOW
+REDSTONE_LIGHT: BUILDABLE_GLASS
+CORAL: WATER_PLANT
