--- a/src/fabric-1.17.1/mappings/stepsounds.yaml
+++ b/src/fabric-1.17.1/mappings/stepsounds.yaml
@@ -1,4 +1,4 @@
-_default: GRASS
+_default: GRAVEL
 GROUND: GRAVEL
 WOOD: WOOD
 PLANT: GRASS
@@ -12,26 +12,26 @@ SNOW: SNOW
 POWDER_SNOW: POWDER_SNOW
 LADDER: LADDER
 ANVIL: ANVIL
-SLIME: SLIME
-HONEY: HONEY
+SLIME: SLIME_BLOCK
+HONEY: HONEY_BLOCK
 WET_GRASS: WET_GRASS
-CORAL: CORAL
+CORAL: CORAL_BLOCK
 BAMBOO: BAMBOO
 BAMBOO_SAPLING: BAMBOO_SAPLING
 SCAFFOLDING: SCAFFOLDING
 SWEET_BERRY_BUSH: SWEET_BERRY_BUSH
 CROP: CROP
-STEM: STEM
+STEM: HARD_CROP
 VINE: VINE
 NETHER_WART: NETHER_WART
 LANTERN: LANTERN
-HYPHAE: NETHER_STEM
+HYPHAE: STEM
 NYLIUM: NYLIUM
 FUNGUS: FUNGUS
-ROOT: ROOT
+ROOT: ROOTS
 SHROOMLIGHT: SHROOMLIGHT
 NETHER_VINE: WEEPING_VINES
-NETHER_VINE_LOWER_PITCH: WEEPING_VINES_LOWER_PITCH
+NETHER_VINE_LOWER_PITCH: TWISTING_VINES
 SOUL_SAND: SOUL_SAND
 SOUL_SOIL: SOUL_SOIL
 BASALT: BASALT
@@ -40,15 +40,15 @@ NETHERRACK: NETHERRACK
 NETHER_BRICK: NETHER_BRICKS
 NETHER_SPROUT: NETHER_SPROUTS
 NETHER_ORE: NETHER_ORE
-BONE: BONE
-NETHERITE: NETHERITE
+BONE: BONE_BLOCK
+NETHERITE: NETHERITE_BLOCK
 ANCIENT_DEBRIS: ANCIENT_DEBRIS
 LODESTONE: LODESTONE
 CHAIN: CHAIN
 NETHER_GOLD: NETHER_GOLD_ORE
 GILDED_BLACKSTONE: GILDED_BLACKSTONE
 CANDLE: CANDLE
-AMETHYST_BLOCK: AMETHYST_BLOCK
+AMETHYST_BLOCK: AMETHYST
 AMETHYST_CLUSTER: AMETHYST_CLUSTER
 SMALL_AMETHYST_BUD: SMALL_AMETHYST_BUD
 MEDIUM_AMETHYST_BUD: MEDIUM_AMETHYST_BUD
@@ -63,7 +63,7 @@ SPORE_BLOSSOM: SPORE_BLOSSOM
 AZALEA: AZALEA
 FLOWERING_AZALEA: FLOWERING_AZALEA
 MOSS_CARPET: MOSS_CARPET
-MOSS_BLOCK: MOSS_BLOCK
+MOSS_BLOCK: MOSS
 BIG_DRIPLEAF: BIG_DRIPLEAF
 SMALL_DRIPLEAF: SMALL_DRIPLEAF
 ROOTED_DIRT: ROOTED_DIRT
