--- a/src/fabric-1.17.1/mappings/tabs.yaml
+++ b/src/fabric-1.17.1/mappings/tabs.yaml
@@ -1,14 +1,14 @@
-_default: ItemGroup.MISC
+_default: CreativeModeTab.TAB_MISC
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@NAMEItemGroup.get()"
+_mcreator_map_template: "@JavaModNameTabs.TAB_@REGISTRYNAME"
 No creative tab entry: null
-BUILDING_BLOCKS: ItemGroup.BUILDING_BLOCKS
-DECORATIONS: ItemGroup.DECORATIONS
-REDSTONE: ItemGroup.REDSTONE
-TRANSPORTATION: ItemGroup.TRANSPORTATION
-MISC: ItemGroup.MISC
-FOOD: ItemGroup.FOOD
-TOOLS: ItemGroup.TOOLS
-COMBAT: ItemGroup.COMBAT
-BREWING: ItemGroup.BREWING
-MATERIALS: ItemGroup.MATERIALS
+BUILDING_BLOCKS: CreativeModeTab.TAB_BUILDING_BLOCKS
+DECORATIONS: CreativeModeTab.TAB_DECORATIONS
+REDSTONE: CreativeModeTab.TAB_REDSTONE
+TRANSPORTATION: CreativeModeTab.TAB_TRANSPORTATION
+MISC: CreativeModeTab.TAB_MISC
+FOOD: CreativeModeTab.TAB_FOOD
+TOOLS: CreativeModeTab.TAB_TOOLS
+COMBAT: CreativeModeTab.TAB_COMBAT
+BREWING: CreativeModeTab.TAB_BREWING
+MATERIALS: CreativeModeTab.TAB_MATERIALS
