--- a/src/fabric-1.17.1/workspacebase/build.gradle
+++ b/src/fabric-1.17.1/workspacebase/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:0.12.4"
 
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.41.3+1.17"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${generator.getGeneratorBuildFileVersion()}+1.17"
 }
 
 processResources {
