--- a/src/fabric-1.17.1/mappings/blocksitems.yaml
+++ b/src/fabric-1.17.1/mappings/blocksitems.yaml
@@ -3885,7 +3885,7 @@ Items.THING_BANNER_PATTERN:
   - Items.MOJANG_BANNER_PATTERN
   - "mojang_banner_pattern"
 Items.GLOBE_BANNER_PATTERN:
-  - Items.GLOBE_BANNER_PATTER
+  - Items.GLOBE_BANNER_PATTERN
   - "globe_banner_pattern"
 Items.SWEET_BERRIES:
   - Items.SWEET_BERRIES
