--- a/src/fabric-1.17.1/generator.yaml
+++ b/src/fabric-1.17.1/generator.yaml
@@ -3,6 +3,10 @@ status: dev
 buildfileversion: 0.46.1
 subversion: 1.2.2
 
+java_models:
+  key: mojmap-1.17.x
+  requested_key_words: [ModelPart, ~ModelRenderer]
+
 gradle:
   setup_task: tasks
   run_client: runClient
@@ -28,6 +32,9 @@ base_templates:
 - template: modbase/client.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
   canLock: true
+- template: elementinits/javamodels.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameModels.java"
+  condition: hasJavaModels()
 - template: modbase/fabric.mod.json.ftl
   writer: json
   name: "@RESROOT/fabric.mod.json"
