--- a/src/fabric-1.17.1/generator.yaml
+++ b/src/fabric-1.17.1/generator.yaml
@@ -1,7 +1,7 @@
 name: Minecraft Fabric for 1.17.1 - @buildfileversion
 status: dev
 buildfileversion: 0.46.1
-subversion: 1.2.2
+subversion: 1.3
 
 java_models:
   key: mojmap-1.17.x
@@ -48,6 +48,11 @@ base_templates:
 - template: elementinits/sounds.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameSounds.java"
   condition: hasSounds()
+- template: modbase/accesswidener.ftl
+  writer: file
+  name: "@RESROOT/META-INF/@MODID.accesswidener."
+  condition_any:
+    - ${w.hasToolsOfType('Fishing rod')}
 
 language_file:
   format: json
