--- a/src/fabric-1.17.1/generator.yaml
+++ b/src/fabric-1.17.1/generator.yaml
@@ -1,7 +1,7 @@
 name: Minecraft Fabric for 1.17.1 - @buildfileversion
 status: dev
 buildfileversion: 0.46.1
-subversion: 1.6
+subversion: 1.3
 
 java_models:
   key: mojmap-1.17.x
@@ -26,34 +26,34 @@ item_textures_dir: "@MODASSETSROOT/textures/items"
 armor_textures_dir: "@RESROOT/assets/minecraft/textures/models/armor"
 
 base_templates:
-  - template: modbase/mod.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/@JavaModName.java"
-    canLock: true
-  - template: modbase/client.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
-    canLock: true
-  - template: modbase/variableslist.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/network/@JavaModNameVariables.java"
-    condition: hasVariables()
-  - template: elementinits/javamodels.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameModels.java"
-    condition: hasJavaModels()
-  - template: modbase/fabric.mod.json.ftl
-    writer: json
-    name: "@RESROOT/fabric.mod.json"
-  - template: "modbase/pack.mcmeta.ftl"
-    writer: json
-    name: "@RESROOT/pack.mcmeta"
-  - template: modbase/sounds.json.ftl
-    writer: json
-    name: "@MODASSETSROOT/sounds.json"
-    condition: hasSounds()
-  - template: elementinits/sounds.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameSounds.java"
-    condition: hasSounds()
-  - template: modbase/accesswidener.ftl
-    writer: file
-    name: "@RESROOT/@modid.accesswidener"
+- template: modbase/mod.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/@JavaModName.java"
+  canLock: true
+- template: modbase/client.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
+  canLock: true
+- template: modbase/variableslist.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/network/@JavaModNameVariables.java"
+  condition: hasVariables()
+- template: elementinits/javamodels.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameModels.java"
+  condition: hasJavaModels()
+- template: modbase/fabric.mod.json.ftl
+  writer: json
+  name: "@RESROOT/fabric.mod.json"
+- template: "modbase/pack.mcmeta.ftl"
+  writer: json
+  name: "@RESROOT/pack.mcmeta"
+- template: modbase/sounds.json.ftl
+  writer: json
+  name: "@MODASSETSROOT/sounds.json"
+  condition: hasSounds()
+- template: elementinits/sounds.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameSounds.java"
+  condition: hasSounds()
+- template: modbase/accesswidener.ftl
+  writer: file
+  name: "@RESROOT/META-INF/@modid.accesswidener"
 
 language_file:
   format: json
