--- a/src/fabric-1.17.1/fuel.definition.yaml
+++ b/src/fabric-1.17.1/fuel.definition.yaml
@@ -1,4 +1,4 @@
 global_templates:
-  - template: elementinits/fuels.java.ftl
+  - template: elementinits/itemextensions.java.ftl
     writer: java
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameFuels.java"
